# trackion

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sqlc.yaml  tsconfig.json
.github/workflows/: client-ci.yml  desktop-ci.yml  issues-management.yml  (+8 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
bak/: old_schema.sql
ci/: Dockerfile  compose.yml
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
cmd/: api.go  main.go
dashboard/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
desktop/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
doc/: index.md  quick-start.md  self-hosting.md
docs/: api-reference.md  architecture.md  database-schema.md  desktop-development.md  desktop-distribution.md  docmd.config.json  index.md  introduction.md  javascript-api.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick-start.md  saas-guide.md  sdk-usage.md  self-hosting.md  updater-setup.md
examples/: README.md
migrations/: 20260315093445_create_events_projects.sql  20260316053808_add_project_settings.sql
queries/: events.sql  projects.sql  sessions.sql  subscriptions.sql  users.sql
scripts/: bump-version.sh  release-sdk.sh  squash-schema.sh  updater.ps1
sdks/: README.md
tests/: api_routes_test.go
web/: README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+571 files in other folders)
